chore: holy vibe refactor
